k8s/ordersystem_depl.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: want-deployment
  namespace: sm

spec:
  replicas: 1
  selector:
    matchLabels:
      app: want
  template:
    metadata:
      labels:
        app: want
    spec:
      containers:
        - name: want
        # AWS의 ECR를 사용 
          image: 346903264902.dkr.ecr.ap-northeast-2.amazonaws.com/sangmin-ordersystem:latest
          ports: 
            - containerPort: 8080
          resources:
            limits: # 최대 할당량
              cpu: "0.5"
              memory: "500Mi"
            requests: # 최소 할당량
              cpu: "0.25"
              memory: "250Mi"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
          # 컨테이너 시작후 지연시간 설정
            initialDelaySeconds: 10
          # 확인 반복 주기
            periodSeconds: 10
          # 요청 timeout 설정
            timeoutSeconds: 1
          # 성공 인식 횟수 설정
            successThreshold: 1
          # 연속 실패 횟수 설정 : 연속적으로 3번을 실패하면 건강하지 않은 상태로 판단하여 기존 서버 종료시키지 않음
            failureThreshold: 3
