k8s/want_service.yml
apiVersion: v1
kind: Service
metadata:
  name: want-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80 # service Port를 의미,
      targetPort: 8080 #service가 라우팅해줄 대상의 port
  selector:
    app: want
